percentage margins + flex incorrectly overflows the flexbox https://bugs.webkit.org/show_bug.cgi?id=93411

Reviewed by Tony Chang.

Source/WebCore:

Percent margins should always be computed with respect to the containing
block's width, not it's height. We were getting this wrong in column flows.

Test: css3/flexbox/percent-margins.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::computeMarginValue):
(WebCore):
(WebCore::RenderFlexibleBox::computeMainAxisPreferredSizes):
(WebCore::RenderFlexibleBox::layoutAndPlaceChildren):
* rendering/RenderFlexibleBox.h:

LayoutTests:

* css3/flexbox/percent-margins-expected.txt: Added.
* css3/flexbox/percent-margins.html: Added.


Canonical link: https://commits.webkit.org/111295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124987 268f45cc-cd09-0410-ab3c-d52691b4dbfc